overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
+
 
 /* Font modifications to all heading 1's */
 h1 {
@@ -40,7 +42,7 @@ a:hover {
 /* Makes all text on every page centered and changes bg to the gif*/
 body {
     text-align: center;
-    background: url("../images/bg-try-2.jpg");
+    background: url("../images/newal.gif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
